--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
       <a-camera position="0 0 0" look-controls="enabled: false" cursor="fuse: false; rayOrigin: mouse;" raycaster="far: 50; objects: .clickable"></a-camera>
     </a-scene>
 
-    <script>
+    <!-- <script>
       document.addEventListener("DOMContentLoaded", function () {
         const exampleTarget = document.querySelector("#example-target");
         const modelInfoEl = document.getElementById("model-info");
@@ -107,6 +107,110 @@
             });
           }
         });
+
+      });
+    </script> -->
+    <script>
+      document.addEventListener("DOMContentLoaded", function () {
+        const sceneEl = document.querySelector("a-scene");
+        let arSystem;
+        sceneEl.addEventListener("loaded", function () {
+          arSystem = sceneEl.systems["mindar-image-system"];
+        });
+        1;
+
+        const exampleTarget = document.querySelector("#example-target");
+
+        const startButton = document.querySelector("#example-start-button");
+        const stopButton = document.querySelector("#example-stop-button");
+        const pauseButton = document.querySelector("#example-pause-button");
+        const pauseKeepVideoButton = document.querySelector("#example-pause-keep-video-button");
+        const unpauseButton = document.querySelector("#example-unpause-button");
+
+        // arReady event triggered when ready
+        sceneEl.addEventListener("arReady", (event) => {
+          // console.log("MindAR is ready")
+        });
+        // arError event triggered when something went wrong. Mostly browser compatbility issue
+        sceneEl.addEventListener("arError", (event) => {
+          // console.log("MindAR failed to start")
+        });
+        // detect target found
+        exampleTarget.addEventListener("targetFound", (event) => {
+          console.log("target found");
+          document.getElementById("vid").play();
+        });
+        // detect target lost
+        exampleTarget.addEventListener("targetLost", (event) => {
+          console.log("target lost");
+          document.getElementById("vid").pause();
+        });
+
+
+        AFRAME.registerComponent("piganimate-png", {
+          init: function() {
+            // load the .pngs
+            let loader = new THREE.TextureLoader()
+            this.pngArray =[];
+
+            const numFrames=5;
+
+            for (let i = 0; i < numFrames; i++) {
+              const frameNumber = i.toString().padStart(2,'0');
+              const imagePath = `static/image-animation/piganimate/frame_${i}_delay-0.2s.png`;
+              this.pngArray.push(loader.load(imagePath));
+              console.log('Loaded image: ${imagePath}');
+            }
+
+            this.el.addEventListener('loaded', e => {
+              let mesh = this.el.getObject3D("mesh")
+              this.material = mesh.material
+
+              var i = 0
+              this.id = setInterval(e => {
+                if (i >= this.pngArray.length) i = 0;
+                this.material.map = this.pngArray[i++]
+                this.material.needsUpdate = true
+              }, 155)
+            });
+          }
+        });
+
+        AFRAME.registerComponent("dragonanimate-png", {
+          init: function() {
+            // load the .pngs
+            let loader = new THREE.TextureLoader()
+            this.pngArray =[];
+
+            const numFrames=48;
+
+            for (let i = 0; i < numFrames; i++) {
+              const frameNumber = i.toString().padStart(2,'0');
+              const imagePath = `static/image-animation/dragonanimate/frame_${frameNumber}_delay-0.04s.png`;
+              this.pngArray.push(loader.load(imagePath));
+              console.log('Loaded image: ${imagePath}');
+            }
+
+            this.el.addEventListener('loaded', e => {
+              let mesh = this.el.getObject3D("mesh")
+              this.material = mesh.material
+
+              var i = 0
+              this.id = setInterval(e => {
+                if (i >= this.pngArray.length) i = 0;
+                this.material.map = this.pngArray[i++]
+                this.material.needsUpdate = true
+              }, 30)
+            });
+          }
+        });
+
+      screen.orientation.addEventListener("change", () => {
+        // window.location.reload();
+        arSystem.stop();
+        arSystem.start();
+      });
+
 
       });
     </script>
