--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<html>
+<!-- <html>
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1.0" />
     <script src="https://aframe.io/releases/1.4.2/aframe.min.js"></script>
@@ -6,12 +6,12 @@
     <link rel="stylesheet" type="text/css" href="./static/css/style.css" />
     <link href='https://fonts.googleapis.com/css?family=Roboto' rel='stylesheet'>
   </head>
-  <body style="margin: 0; background-color: black;">
+  <body style="margin: 0; background-color: black;"> -->
     <!-- UI overlay -->
-    <div id="UI-overlay" style="max-height: 100%; max-width: 100%;">
-      <div id="UI-placement">
+    <!-- <div id="UI-overlay" style="max-height: 100%; max-width: 100%;"> -->
+      <!-- <div id="UI-placement"> -->
         <!-- scanning box crosshair copied from MindAR example -->
-        <div id="scanning-overlay" class="mindar-ui-scanning">
+        <!-- <div id="scanning-overlay" class="mindar-ui-scanning">
           <div class="scanning">
             <div class="inner" id="scanBoxSize">
               <div class="scanline"></div>
@@ -31,27 +31,27 @@
           </div>
         </div>
       </div>
-    </div>
+    </div> -->
 
     <!-- Text box for model info -->
-    <div id="text-box" style="position: absolute; top: 10px; left: 10px; background-color: rgba(255, 255, 255, 0.8); padding: 10px; border-radius: 5px; font-family: 'Roboto', sans-serif; display: none;">
+    <!-- <div id="text-box" style="position: absolute; top: 10px; left: 10px; background-color: rgba(255, 255, 255, 0.8); padding: 10px; border-radius: 5px; font-family: 'Roboto', sans-serif; display: none;">
       <p id="model-info" style="margin: 0; color: black;"></p>
-    </div>
+    </div> -->
 
     <!-- A-Frame scene with MindAR -->
-    <a-scene mindar-image="imageTargetSrc: ./static/mind-file/Shinchan.mind; uiScanning: #scanning-overlay; filterMinCF:0.0001; filterBeta: 0.001;" color-space="sRGB" renderer="colorManagement: true, physicallyCorrectLights" vr-mode-ui="enabled: false" device-orientation-permission-ui="enabled: false" embedded>
+    <!-- <a-scene mindar-image="imageTargetSrc: ./static/mind-file/Shinchan.mind; uiScanning: #scanning-overlay; filterMinCF:0.0001; filterBeta: 0.001;" color-space="sRGB" renderer="colorManagement: true, physicallyCorrectLights" vr-mode-ui="enabled: false" device-orientation-permission-ui="enabled: false" embedded>
       <a-assets>
-        <a-asset-item id="chinese_dragon_trim" src="./static/3D-file/gltf/chinese_dragon_trim/test1.gltf"></a-asset-item>
+        <a-asset-item id="Mcdonalds_cube" src="./static/3D-file/glb/Mcdonalds_cube.glb"></a-asset-item>
       </a-assets>
 
       <a-entity id="example-target" mindar-image-target="targetIndex: 0">   
-        <a-gltf-model id="model" src="#chinese_dragon_trim" rotation="0 0 0" position="0 -0.5 0.1" scale="0.0005 0.0005 0.0005" animation-mixer></a-gltf-model>
+        <a-gltf-model id="model" src="#Mcdonalds_cube" rotation="0 0 0" position="0 0 0" scale="1 1 1" animation-mixer></a-gltf-model>
       </a-entity>
 
       <a-camera position="0 0 0" look-controls="enabled: false" cursor="fuse: false; rayOrigin: mouse;" raycaster="far: 50; objects: .clickable"></a-camera>
     </a-scene>
 
-    <!-- <script>
+    <script>
       document.addEventListener("DOMContentLoaded", function () {
         const exampleTarget = document.querySelector("#example-target");
         const modelInfoEl = document.getElementById("model-info");
@@ -78,38 +78,74 @@
           console.log("Model loaded, starting animation");
           model.setAttribute("animation-mixer", "");
         });
-
-        AFRAME.registerComponent("dragonanimate-png", {
-          init: function() {
-            // load the .pngs
-            let loader = new THREE.TextureLoader()
-            this.pngArray =[];
-
-            const numFrames=48;
-
-            for (let i = 0; i < numFrames; i++) {
-              const frameNumber = i.toString().padStart(2,'0');
-              const imagePath = `static/image-animation/dragonanimate/frame_${frameNumber}_delay-0.04s.png`;
-              this.pngArray.push(loader.load(imagePath));
-              console.log('Loaded image: ${imagePath}');
-            }
-
-            this.el.addEventListener('loaded', e => {
-              let mesh = this.el.getObject3D("mesh")
-              this.material = mesh.material
-
-              var i = 0
-              this.id = setInterval(e => {
-                if (i >= this.pngArray.length) i = 0;
-                this.material.map = this.pngArray[i++]
-                this.material.needsUpdate = true
-              }, 30)
-            });
-          }
-        });
-
       });
-    </script> -->
+    </script>
+  </body>
+</html> -->
+
+<html>
+  <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1.0" />
+    <script src="https://aframe.io/releases/1.4.2/aframe.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/mind-ar@1.2.2/dist/mindar-image-aframe.prod.js"></script>
+    <script src="https://cdn.jsdelivr.net/gh/donmccurdy/aframe-extras@v6.1.1/dist/aframe-extras.min.js"></script>
+    <script src="https://rawgit.com/mayognaise/aframe-gif-shader/master/dist/aframe-gif-shader.min.js"></script>
+    <link rel="stylesheet" type="text/css" href="./static/css/style.css" />
+    <link href='https://fonts.googleapis.com/css?family=Roboto' rel='stylesheet'>
+  </head>
+  <body style="margin: 0; background-color: black;">
+    <!-- id="UI-overlay" fixes the issue where the AR content gets cutoff at where the buttons are -->
+    <!-- display flex is to prevent the UI overlay from disappearing when displaying AR content. Can be removed -->
+    <div id="UI-overlay" style="max-height: 100%; max-width: 100%;">
+      <div id="UI-placement">
+        <!-- scanning box crosshair copied from MindAR example -->
+        <div id="scanning-overlay" class="mindar-ui-scanning">
+          <div class="scanning">
+            <div class="inner" id="scanBoxSize">
+              <div class="scanline"></div>
+            </div>
+          </div>
+          <p id="scanBoxP">Scan characters to see AR feature!</p>
+        </div>
+        
+        <div id="iconsDiv">
+          <div class="btnDiv">
+            <img id="loadModelsButton" src="./static/images/icons/View-Models-button.png" alt="Click to load more Models" onClick="location.href='./models.html'">
+            <p class="btnP">Add Models</p>
+          </div>
+          <p id="pDistance"></p>
+          <div class="btnDiv">
+            <img id="moreInfoButton" src="./static/images/icons/More-Info-Button.png" alt="Info Button" onClick="console.log('info button clicked')">
+            <p class="btnP">More Info</p>
+          </div>
+          
+        </div>
+  
+      </div>
+
+    </div>
+
+    <a-scene mindar-image="imageTargetSrc: ./static/mind-file/cny.mind; uiScanning: #scanning-overlay; filterMinCF:0.0001; filterBeta: 0.001;" color-space="sRGB" renderer="colorManagement: true, physicallyCorrectLights" vr-mode-ui="enabled: false" device-orientation-permission-ui="enabled: false" embedded>
+
+      <a-assets>
+        <a-asset-item id="chinese_dragon_trim" src="./static/3D-file/gltf/chinese_dragon_trim/test1.gltf"></a-asset-item>
+      </a-assets>
+
+      <a-entity id="example-target" mindar-image-target="targetIndex: 0">   
+        <a-gltf-model src="#chinese_dragon_trim" rotation="0 0 0 " position="0 -0.5 0.1" scale="0.0005 0.0005 0.0005" animation-mixer></a-gltf-model>
+      </a-entity>
+
+      <!-- <a-entity id="example-target" mindar-image-target="targetIndex: 2">
+        <a-image position="0 0 0" height="1.5" width="1.5" rotation="0 0 0" piganimate-png></a-image>
+      </a-entity>
+
+      <a-entity id="example-target" mindar-image-target="targetIndex: 3">
+        <a-image position="0 0 0" height="2.6" width="1.85" rotation="0 0 0" dragonanimate-png></a-image> -->
+      </a-entity>
+
+      <a-camera position="0 0 0" look-controls="enabled: false" cursor="fuse: false; rayOrigin: mouse;" raycaster="far: ${customFields.libVersion}; objects: .clickable"></a-camera>
+
+    </a-scene>
     <script>
       document.addEventListener("DOMContentLoaded", function () {
         const sceneEl = document.querySelector("a-scene");
@@ -121,11 +157,11 @@
 
         const exampleTarget = document.querySelector("#example-target");
 
-        const startButton = document.querySelector("#example-start-button");
-        const stopButton = document.querySelector("#example-stop-button");
-        const pauseButton = document.querySelector("#example-pause-button");
-        const pauseKeepVideoButton = document.querySelector("#example-pause-keep-video-button");
-        const unpauseButton = document.querySelector("#example-unpause-button");
+        // const startButton = document.querySelector("#example-start-button");
+        // const stopButton = document.querySelector("#example-stop-button");
+        // const pauseButton = document.querySelector("#example-pause-button");
+        // const pauseKeepVideoButton = document.querySelector("#example-pause-keep-video-button");
+        // const unpauseButton = document.querySelector("#example-unpause-button");
 
         // arReady event triggered when ready
         sceneEl.addEventListener("arReady", (event) => {
