--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     </a-scene>
 
     <div id="text-box" style="position: absolute; top: 10px; left: 10px; background-color: rgba(255, 255, 255, 0.8); padding: 10px; border-radius: 5px; font-family: 'Roboto', sans-serif; display: none;">
-      <p id="fortuneSlip" style="margin: 0; color: black;"></p>
+      <p class="fortune-slip" id="fortuneSlip" style="margin: 0; color: black;"></p>
     </div>
 
     <script>
