--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     <a-scene mindar-image="imageTargetSrc: ./static/mind-file/Shinchan.mind; uiScanning: #scanning-overlay; filterMinCF:0.0001; filterBeta: 0.001;" color-space="sRGB" renderer="colorManagement: true, physicallyCorrectLights" vr-mode-ui="enabled: false" device-orientation-permission-ui="enabled: false" embedded>
 
       <a-entity id="example-target" mindar-image-target="targetIndex: 0">  
-        <a-gltf-model id="model" rotation="0 0 0 " position="0 -3 -9" scale="2 2 2" animation-mixer></a-gltf-model>
+        <a-gltf-model id="model" src="#minecraft_chest" rotation="0 -90 0 " position="0 0 0" scale="0.005 0.005 0.005" animation-mixer></a-gltf-model>
       </a-entity>
 
       <a-camera position="0 0 0" look-controls="enabled: false" cursor="fuse: false; rayOrigin: mouse;" raycaster="far: ${customFields.libVersion}; objects: .clickable"></a-camera>
@@ -107,6 +107,7 @@
           if (hasClicked) return; // If already clicked, do nothing
           hasClicked = true; // Set flag to true after the first click
 
+          // Display the fortune
           // Display the fortune slip and crack the fortune cookie
           const fortuneSlip = document.getElementById('fortuneSlip');
           const randomFortune = fortunes[Math.floor(Math.random() * fortunes.length)];
