--- a/index.html
+++ b/index.html
@@ -32,11 +32,11 @@
     <a-scene mindar-image="imageTargetSrc: ./static/mind-file/Shinchan.mind; uiScanning: #scanning-overlay; filterMinCF:0.0001; filterBeta: 0.001;" color-space="sRGB" renderer="colorManagement: true, physicallyCorrectLights" vr-mode-ui="enabled: false" device-orientation-permission-ui="enabled: false" embedded>
 
       <a-assets>
-        <a-asset-item id="Mcdonalds_cube" src="./static/3D-file/glb/Mcdonalds_cube.glb"></a-asset-item>
+        <a-asset-item id="minecraft_chest" src="./static/3D-file/glb/minecraft_chest.glb"></a-asset-item>
       </a-assets>
 
       <a-entity id="example-target" mindar-image-target="targetIndex: 0">   
-        <a-gltf-model id="fortuneCookie" src="#Mcdonalds_cube" rotation="0 -90 0 " position="0 0 0" scale="1 1 1" animation-mixer></a-gltf-model>
+        <a-gltf-model id="fortuneCookie" src="#minecraft_chest" rotation="0 -90 0 " position="0 0 0" scale="1 1 1" animation-mixer></a-gltf-model>
       </a-entity>
 
       <a-camera position="0 0 0" look-controls="enabled: false" cursor="fuse: false; rayOrigin: mouse;" raycaster="far: ${customFields.libVersion}; objects: .clickable"></a-camera>
