--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
         
         // Hide the fortune cookie initially
         const minecraft_chest = document.getElementById('minecraft_chest');
-        minecraft_chest.style.display = "none";
+        // minecraft_chest.style.display = "none";
         minecraft_chest.classList.add('shaking'); // Add the shaking class
 
         // Listen for the target found event
