--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
         "A windfall of good fortune is heading your way."
       ];
       
-      minecraftChest.object3D.visible = false;
+      minecraftChest.object3D.visible = true;
 
       // Listen for the target found event
       exampleTarget.addEventListener("targetFound", event => {
