--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
       </a-assets>
 
       <a-entity id="example-target" mindar-image-target="targetIndex: 0">
-        <a-gltf-model id="minecraftChest" src="#poke-minecraft_chest-model" rotation="0 -90 0" position="0 0 0" scale="0.005 0.005 0.005" animation-mixer></a-gltf-model>
+        <a-gltf-model id="minecraftChest" src="#minecraft_chest" rotation="0 -90 0" position="0 0 0" scale="0.005 0.005 0.005" animation-mixer></a-gltf-model>
       </a-entity>
 
       <a-camera position="0 0 0" look-controls="enabled: false" cursor="fuse: false; rayOrigin: mouse;" raycaster="far: 30; objects: .clickable"></a-camera>
