--- a/index.html
+++ b/index.html
@@ -54,6 +54,8 @@
 
           // Show the Poké Ball after the target is found
           minecraftChest.setAttribute("visible", "true");
+
+          exampleTarget.removeAttribute("mindar-image-target");
         });
         
         // Function for confetti
