--- a/index.html
+++ b/index.html
@@ -56,6 +56,9 @@
           minecraftChest.setAttribute("visible", "true");
 
           exampleTarget.removeAttribute("mindar-image-target");
+
+          // Set the model to remain visible
+          minecraftChest.setAttribute("keep-visible", "true");
         });
         
         // Function for confetti
